--- a/app/src/main/develop/res/values/attrs.xml
+++ b/app/src/main/develop/res/values/attrs.xml
@@ -1,13 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="CircularProgressView">
-        <attr name="backWidth" format="dimension" />    <!--背景圆环宽度-->
-        <attr name="progWidth" format="dimension" />    <!--进度圆环宽度-->
-        <attr name="backColor" format="color" />        <!--背景圆环颜色-->
-        <attr name="progColor" format="color" />        <!--进度圆环颜色-->
-        <attr name="progStartColor" format="color" />   <!--进度圆环开始颜色-->
-        <attr name="progFirstColor" format="color" />   <!--进度圆环结束颜色-->
-        <attr name="progress" format="integer" />       <!--圆环进度-->
-        <attr name="startAngle" format="integer" />     <!--起始角度-->
+    <declare-styleable name="ViewfinderView">
+        <attr name="maskColor" format="color" />
+        <attr name="frameColor" format="color" />
+        <attr name="cornerColor" format="color"/>
+        <attr name="laserColor" format="color"/>
+        <attr name="resultPointColor" format="color"/>
+        <attr name="labelText" format="string"/>
+        <attr name="labelTextColor" format="color"/>
+        <attr name="labelTextSize" format="dimension"/>
+        <attr name="labelTextPadding" format="dimension"/>
+        <attr name="labelTextLocation" format="enum">
+            <enum name="top" value="0"/>
+            <enum name="bottom" value="1"/>
+        </attr>
+        <attr name="showResultPoint" format="boolean"/>
+        <attr name="frameWidth" format="dimension"/>
+        <attr name="frameHeight" format="dimension"/>
+        <attr name="gridColumn" format="integer"/>
+        <attr name="gridHeight" format="dimension"/>
+        <attr name="laserStyle" format="enum">
+            <enum name="none" value="0"/>
+            <enum name="line" value="1"/>
+            <enum name="grid" value="2"/>
+        </attr>
+        <attr name="cornerRectWidth" format="dimension"/>
+        <attr name="cornerRectHeight" format="dimension"/>
+        <attr name="scannerLineMoveDistance" format="dimension"/>
+        <attr name="scannerLineHeight" format="dimension"/>
+        <attr name="frameLineWidth" format="dimension"/>
+        <attr name="scannerAnimationDelay" format="integer"/>
+        <attr name="frameRatio" format="float"/>
     </declare-styleable>
 </resources>
